# searoute-validator

./: .gitignore  README.md  SPEC.md  pyproject.toml
app/: __init__.py  main.py  models.py
scripts/: build_channels.py  fetch_land.py
searoute_validator/: __init__.py  api.py  config.py  geometry.py  main.py  validator.py
searoute_validator/data/: channels.geojson
tests/: test_validator.py
web/: app.js  index.html  style.css
