[project]
name = "searoute-validator"
version = "1.0.0"
description = "A microservice API that validates whether sea routes are navigable for a shipping game."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "shapely>=2.0",
    "pyproj>=3.6",
]

[project.optional-dependencies]
# Faster, approximate point-on-land backend (POINT_BACKEND=landmask).
landmask = ["global-land-mask>=1.0"]
# Test + dev tooling.
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
