[project]
name = "searoute-validator"
version = "1.0.0"
description = "Validates whether sea routes are navigable — checks if a straight line between two points crosses land."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core library deps only — no web framework required for validate_leg() etc.
dependencies = [
    "shapely>=2.0",
    "pyproj>=3.6",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Run the FastAPI HTTP server.
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Faster, approximate point-on-land backend (POINT_BACKEND=landmask).
landmask = ["global-land-mask>=1.0"]
# Everything needed to develop and test.
dev = ["pytest>=8.0", "httpx>=0.27", "searoute-validator[server]"]

[project.urls]
Homepage = "https://github.com/hankhank10/searoute-validator"
Repository = "https://github.com/hankhank10/searoute-validator"

[project.scripts]
searoute-validator = "searoute_validator.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["searoute_validator"]

[tool.setuptools.package-data]
searoute_validator = ["data/*.geojson"]

[tool.pytest.ini_options]
testpaths = ["tests"]
